#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.
	
Tag: V00-02-17
2014-10-02 Mikhail S. Dubrovin
- In GeometryObject - add global methods det_shape(arr), data2x2ToTwo2x1(arr2x2), two2x1ToData2x2(arrTwo2x1)
	- now methods return ndarrays through det_shape(arr), which shaffles pixels for cspad2x2
	- add test plot of cspad2x2 in ex_geometry_access.cpp and GeometryAccess.py
- add GlobalMethods.h
	
Tag: V00-02-16
2014-09-30 Mikhail S. Dubrovin
- In SegGeometry.(py,h), SegGeometryCspad2x1V1.(py,h,cpp) add method pixel_mask_array(mbits=0377), update example in *.py 
- In GeometryObject, GeometryAccess.(py,h,cpp) add methods get_pixel_mask(...), set_geo_pars(...), move_geo(...), tilt_geo(...) 
- GeometryAccess.py add method get_psf()
- update examples in test/ex_geometry_access.cpp and GeometryAccess.py
	
Tag: V00-02-15
2014-09-12 Mikhail S. Dubrovin
- in GeometryAccess add methods save_pars_in_file(path), set_print_bits(pbits)
- in GeometryObject add methods str_data()
- update test/examples in GeometryAccess.py and test/ex_geometry_access.cpp
	
Tag: V00-02-14
2014-09-09 Mikhail S. Dubrovin
- in GeometryAccess.h - improve doxygen documentation

Tag: V00-02-13
2014-09-02 Mikhail S. Dubrovin
- in src/GeometryAccess.cpp - explicit conversion from double to unsigned

Tag: V00-02-12
2014-08-27 Mikhail S. Dubrovin
- in SegGeometry*.py, Geometry*.py, and CalibFileFinder.py add Sphinx documentation of interfaces
	
Tag: V00-02-11
2014-08-19 Mikhail S. Dubrovin
- in test/ex_geometry_access.cpp and GeometryAccess.py change test files location after summer shutdown
- in SegGeometry.py update comments

Tag: V00-02-10
2014-08-13 Mikhail S. Dubrovin