@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 	
+Tag: V00-02-18
+2014-10-07 Mikhail S. Dubrovin
+- GeometryAccess.py - improve documentation for Spinx 
+	
 Tag: V00-02-17
 2014-10-02 Mikhail S. Dubrovin
 - In GeometryObject - add global methods det_shape(arr), data2x2ToTwo2x1(arr2x2), two2x1ToData2x2(arrTwo2x1)
